# Ba_Arbeit

./: .gitignore  README.md  requirements.txt  runs.csv  summary.json
maps/: turtlebot3_dqn_stage1.yaml  turtlebot3_dqn_stage2.yaml  turtlebot3_dqn_stage3.pgm  turtlebot3_dqn_stage3.yaml  turtlebot3_dqn_stage4.pgm  turtlebot3_dqn_stage4.yaml
src/gazebo_sfm_plugin/: CMakeLists.txt  package.xml
src/my_nav2_rl_pkg/: package.xml  setup.cfg  setup.py
src/my_nav2_rl_pkg/scripts/: env_local_path.py  trainer.py
src/nav2_bt/behavior_trees/: minimal_navigation.xml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
src/nav2_rl/: CMakeLists.txt  package.xml  plugin.xml
src/nav2_rl/include/nav2_rl/: rl_controller.hpp
src/nav2_rl/src/: rl_controller.cpp
src/pedsim_ros/pedsim_gazebo_plugin/launch/: warehouse_demo.launch.py
src/pedsim_ros/pedsim_gazebo_plugin/worlds/: tb3_house_demo_crowd.world
src/pedsim_ros/pedsim_simulator/scenarios/: tb3_house_demo_crowd.xml
src/turtlebot3/turtlebot3_navigation2/param/humble/: waffle_pi.yaml  waffle_pi_classic.yaml
src/turtlebot3_machine_learning/turtlebot3_dqn/: new_environment.py  setup.py
src/turtlebot3_machine_learning/turtlebot3_dqn/Evaluation_RL_Klassisch_Log/: Stage1_AS5_RewardPaper_AlleKomponenten.csv  Stage1_AS5_RewardRobotis_AlleKomponenten.csv  Stage1_klassischerPlaner.csv  Stage2_AS5_RewardPaper_AlleKomponenten.csv  Stage2_AS5_RewardRobotis_AlleKomponenten.csv  Stage2_klassischerPlaner.csv  Stage3_AS5_RewardPaper_AlleKomponenten.csv  Stage3_AS5_RewardRobotis_AlleKomponenten.csv  Stage3_klassischerPlaner.csv  Stage4_AS5_RewardPaper_AlleKomponenten.csv  Stage4_AS5_RewardRobotis_AlleKomponenten.csv  Stage4_klassischerPlaner.csv  Stage5_AS5_RewardPaper_AlleKomponenten.csv  Stage5_AS5_RewardRobotis_AlleKomponenten.csv  Stage5_klassischerPlaner.csv
src/turtlebot3_machine_learning/turtlebot3_dqn/saved_model/: stage1_episode100.h5  stage1_episode100.json  stage1_episode200.h5  stage1_episode200.json
src/turtlebot3_machine_learning/turtlebot3_dqn/turtlebot3_dqn/: Lidar_Subscriber.py  Odom_Subscriber.py  action_graph.py  analyze_rosbag.py  analyze_rosbag_2.py  analyze_rosbag_simtime.py  custom_environment.py  dqn_agent.py  dqn_environment.py  dqn_gazebo.py  dqn_test.py  epsilon_plot.py  eval_rosbag.py  evaluation.py  evaluation_analysis.py  function_tests.py  goal_maker.py  loss_graph.py  loss_plot_overall.py  nav2_agent.py  new_environment.py  per_agent.py  performance_plot.py  rainbow_agent.py  rainbow_env.py  result_graph.py  temp.json  utils.py
src/turtlebot3_msgs/: CMakeLists.txt  package.xml
src/turtlebot3_msgs/msg/: GoalState.msg
src/turtlebot3_msgs/srv/: Dqn.srv  RLLocalPath.srv
src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt
src/turtlebot3_simulations/turtlebot3_gazebo/ament_env_hooks/: 50_turtlebot3_gazebo.sh.in
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: PER_agent.launch.py  agent_test.launch.py  custom_agent_test.launch.py  data_logger.launch.py  my_world.launch.py  spawn_turtlebot3.launch.py  training_complete.launch.py  training_custom.launch.py  training_rainbow.launch.py  training_setup.launch.py  turtlebot3_dqn_stage1.launch.py  turtlebot3_dqn_stage5.launch.py  turtlebot3_dqn_stage6.launch.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/SelfTest/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/model_with_person/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_dqn_world/Savety_WALL/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_dqn_world/Walls/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_dqn_world/Walls_new/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_dqn_world/divider/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle_pi/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: my_world.world  turtlebot3_dqn_stage1.world  turtlebot3_dqn_stage2.world  turtlebot3_dqn_stage3.world  turtlebot3_dqn_stage4.world  turtlebot3_dqn_stage5.world  turtlebot3_dqn_stage6.world
